--- a/Web-Dev/CSS/w3sSelf/style4.css
+++ b/Web-Dev/CSS/w3sSelf/style4.css
@@ -41,6 +41,19 @@ table tr th,td{ color: white;}
 .p4d7 p:nth-last-child(2){text-transform: lowercase;}
 .p4d7 p:nth-last-child(1){text-transform: capitalize;}
 
-.p4d8 p:nth-last-child(){letter-spacing: ;}
-.p4d8 p:nth-last-child(){letter-spacing: ;}
-.p4d8 p:nth-last-child(){letter-spacing: ;}
+.p4d8 p:nth-last-child(8){text-indent: 50px;}
+.p4d8 p:nth-last-child(7){letter-spacing: 5px;}
+.p4d8 p:nth-last-child(6){letter-spacing: -2px;}
+.p4d8 p:nth-last-child(5){line-height: 0.8; background-color: darkblue; color: white;}
+.p4d8 p:nth-last-child(4){line-height: 1.8; background-color: darkblue; color: white;}
+.p4d8 p:nth-last-child(3){word-spacing: 10px;}
+.p4d8 p:nth-last-child(2){word-spacing: -2px;}
+.p4d8 p:nth-last-child(1){white-space: nowrap; background-color: darkblue; color: white;}
+
+.p4d9 p:nth-last-child(7){text-shadow: 2px 2px;}
+.p4d9 p:nth-last-child(6){text-shadow: 2px 2px red;}
+.p4d9 p:nth-last-child(5){text-shadow: 2px 2px 5px #000000;}
+.p4d9 p:nth-last-child(4){color: wheat; text-shadow: 2px 2px 4px #000000;}
+.p4d9 p:nth-last-child(3){text-shadow: 0 0 3px #ff0000;}
+.p4d9 p:nth-last-child(2){text-shadow: 0 0 3px #ff0000, 0 0 5px #0000ff;}
+.p4d9 p:nth-last-child(1){color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;}
