--- a/Web-Dev/CSS/w3sSelf/style5.css
+++ b/Web-Dev/CSS/w3sSelf/style5.css
@@ -2,3 +2,31 @@
 
 table {background-color: darkblue;}
 th,li {color: white;}
+
+.p5d1 p:nth-last-child(3){font-family: 'Times New Roman', Times, serif;}
+.p5d1 p:nth-last-child(2){font-family: Arial, Helvetica, sans-serif;}
+.p5d1 p:nth-last-child(1){font-family: "Lucida Console", "Courier New", monospace;}
+
+.p5d3 p:nth-last-child(3){font-style: normal;}
+.p5d3 p:nth-last-child(2){font-style: italic;}
+.p5d3 p:nth-last-child(1){font-style: oblique;}
+
+.p5d4 p:nth-last-child(2){font-weight: normal;}
+.p5d4 p:nth-last-child(1){font-weight: bold;}
+
+.p5d5 p:nth-last-child(2){font-variant: normal;}
+.p5d5 p:nth-last-child(1){font-variant: small-caps;}
+
+.p5d6 p:nth-last-child(3){font-size: 40px;}
+.p5d6 p:nth-last-child(2){font-size: 30px;}
+.p5d6 p:nth-last-child(1){font-size: 12px;}
+
+.p5d7 p:nth-last-child(3){font-size: 2.5em;} /* 40px/16=2.5em */
+.p5d7 p:nth-last-child(2){font-size: 1.875em;}/* 30px/16=2.5em */
+.p5d7 p:nth-last-child(1){font-size: 0.875em;}/* 14px/16=2.5em */
+
+.p5d8 {font-size: 100%;}
+.p5d8 h1{font-size: 2.5em;}
+.p5d8 h2{font-size: 1.875em;}
+.p5d8 h3{font-size: 10vw;}
+.p5d8 p{font-size: 0.875em;}
